Tue Dec 05 20:08:49 2000  George Lebl <jirka@5z.com>

	* deskguide_applet.c: bind signals on applet-widget BEFORE
	  we call applet_widget_add, as otherwise there is a race where
	  we may not get them.

Wed Nov 29 13:01:34 2000  Tim Janik  <timj@gtk.org>

	* gwmdesktop.c (gwm_desktop_button_press): take deco window movement
	setting into account for double clicks.

	* deskguide_applet.c: sawfish doesn't move decoration window anymore.

2000-11-28 John Fleck <jfleck@inkstain.net>

	* update help/C/desk-guide.sgml based on user feedback

Fri Nov 17 08:20:11 2000  Tim Janik  <timj@gtk.org>

	* deskguide_applet.[hc]: update all relevant places where a VERSION
	number is required, introduced DESKGUIDE_VERSION define.

2000-11-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* gwmthumbnail.c (gdk_image_get): gdk_window_get_visual() always
	returns NULL for pixmaps, so only require a visual when the window
	is not a pixmap

Tue Nov 14 21:01:39 2000  George Lebl <jirka@5z.com>

	* gwmthumbnail.c: #endif should have no arguments, fixes warning

Tue Nov 14 09:03:46 2000  Tim Janik  <timj@gtk.org>

	* deskguide_applet.c (gp_about): up version number to 0.4 to distinguish
	new bug reports.

	* gwmh.[hc]: added gwmh_task_steal_qdata().

	* gwmthumbnail.c:
	* gwmdesktop.c: fix thumbnail destruction.

Tue Nov 14 05:20:38 2000  Tim Janik  <timj@gtk.org>

	* gwmthumbnail.c (gwm_thumb_nail_update_drawable): assure that the
	window we're thumbnailing has reasonable width and height.

Tue Nov 14 04:23:58 2000  Tim Janik  <timj@gtk.org>

	* gwmh.c (get_task_root_and_frame): shut up for a creation/destruction
	race that we already handle gracefully.

	* gwmdesktop.c (thumb_queue_remove): put in a paranoia check.
	i want backtraces if this is triggered.

	* deskguide_applet.c: reenable thumbnail shooting.

	* gwmthumbnail.c (pixbuf_from_drawable): account for failing gc
	creation. gdk_window_get_visual() may return NULL, so get the
	depth from the colormap.
