@@ -75,8 +75,10 @@ static gchar		*DESK_GUIDE_NAME = NULL;
 static ConfigItem gp_config_items[] = {
   CONFIG_PAGE (N_ ("Display")),
   CONFIG_SECTION (sect_layout,					N_ ("Layout")),
+  CONFIG_BOOL (show_arrow,      TRUE,
+	       N_ ("Show tasklist arrow")),
   CONFIG_BOOL (switch_arrow,	FALSE,
-	       N_ ("Switch tasklist arrow")),
+	       N_ ("Switch horizontal/vertical position of tasklist arrow")),
   CONFIG_BOOL (current_only,	FALSE,
 	       N_ ("Only show current desktop in pager")),
   CONFIG_BOOL (raise_grid,	FALSE,
@@ -767,7 +769,9 @@ gp_init_gui (void)
   GtkWidget *button, *abox, *arrow;
   gboolean arrow_at_end = FALSE;
   GtkWidget *main_box;
-  
+
+  abox = NULL;
+
   gtk_widget_set_usize (gp_container, 0, 0);
   gp_panel_size = applet_widget_get_panel_pixel_size (APPLET_WIDGET (gp_applet));
   gp_panel_size = MAX (gp_panel_size, 12);
@@ -832,13 +836,17 @@ gp_init_gui (void)
   
   /* provide box for arrow and button
    */
-  abox = gtk_widget_new (GP_TYPE_VBOX,
-			 "visible", TRUE,
-			 "spacing", 0,
-			 NULL);
-  (BOOL_CONFIG (switch_arrow)
-   ? gtk_box_pack_end
-   : gtk_box_pack_start) (GTK_BOX (main_box), abox, FALSE, TRUE, 0);
+  if (BOOL_CONFIG (show_arrow))
+  {
+    abox = gtk_widget_new (GP_TYPE_VBOX,
+			   "visible", TRUE,
+			   "spacing", 0,
+			   NULL);
+
+    (BOOL_CONFIG (switch_arrow)
+     ? gtk_box_pack_end
+     : gtk_box_pack_start) (GTK_BOX (main_box), abox, FALSE, TRUE, 0);
+  }
 
   /* provide desktop widget container
    */
@@ -856,26 +864,29 @@ gp_init_gui (void)
   
   /* add arrow and button
    */
-  arrow = gtk_widget_new (GTK_TYPE_ARROW,
-			  "visible", TRUE,
-			  "arrow_type", GP_ARROW_DIR,
+  if (BOOL_CONFIG (show_arrow))
+  {
+    arrow = gtk_widget_new (GTK_TYPE_ARROW,
+			    "visible", TRUE,
+			    "arrow_type", GP_ARROW_DIR,
+			    NULL);
+    button = gtk_widget_new (GTK_TYPE_BUTTON,
+			     "visible", TRUE,
+			     "can_focus", FALSE,
+			     "child", arrow,
+			     "signal::clicked", gp_widget_button_toggle_task_list, NULL,
+			     "signal::event", gp_widget_ignore_button, GUINT_TO_POINTER (2),
+			     "signal::event", gp_widget_ignore_button, GUINT_TO_POINTER (3),
+			     NULL);
+    gtk_tooltips_set_tip (gp_tooltips,
+			  button,
+			  DESK_GUIDE_NAME,
 			  NULL);
-  button = gtk_widget_new (GTK_TYPE_BUTTON,
-			   "visible", TRUE,
-			   "can_focus", FALSE,
-			   "child", arrow,
-			   "signal::clicked", gp_widget_button_toggle_task_list, NULL,
-			   "signal::event", gp_widget_ignore_button, GUINT_TO_POINTER (2),
-			   "signal::event", gp_widget_ignore_button, GUINT_TO_POINTER (3),
-			   NULL);
-  gtk_tooltips_set_tip (gp_tooltips,
-			button,
-			DESK_GUIDE_NAME,
-			NULL);
-  (arrow_at_end
-   ? gtk_box_pack_end
-   : gtk_box_pack_start) (GTK_BOX (abox), button, TRUE, TRUE, 0);
-  
+    (arrow_at_end
+     ? gtk_box_pack_end
+     : gtk_box_pack_start) (GTK_BOX (abox), button, TRUE, TRUE, 0);
+  }
+
   /* desktop pagers
    */
   gp_create_desk_widgets ();
@@ -940,6 +951,10 @@ gp_config_check (GtkWidget *widget)
 			    !BOOL_TMP_CONFIG (abandon_area_width));
   gtk_widget_set_sensitive (CONFIG_WIDGET (toplevel, thumb_nail_delay),
 			    BOOL_TMP_CONFIG (enable_thumb_nails));
+  gtk_widget_set_sensitive (CONFIG_WIDGET (toplevel, switch_arrow),
+			    BOOL_TMP_CONFIG (show_arrow));
+  gtk_widget_set_sensitive (CONFIG_WIDGET (toplevel, task_view_popdown_request),
+			    BOOL_TMP_CONFIG (show_arrow));
 }
 
 static void
